--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,7 +84,7 @@
             android:text="宽/高" />
 
         <EditText
-            android:id="@+id/width"
+            android:id="@+id/outputX"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -99,7 +99,7 @@
             android:text="x" />
 
         <EditText
-            android:id="@+id/height"
+            android:id="@+id/outputY"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
