添加旋转原图的选项

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -135,6 +135,32 @@
             android:text="否" />
     </RadioGroup>
 
+    <RadioGroup
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        android:padding="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="原图是否旋转处理" />
+
+        <RadioButton
+            android:id="@+id/rotateProcessing"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="是" />
+
+        <RadioButton
+            android:id="@+id/noRotateProcessing"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="否" />
+    </RadioGroup>
+
     <Button
         android:id="@+id/capture"
         android:layout_width="wrap_content"
